2005-06-22  graydon hoare  <graydon@pobox.com>

	* rcs_file.cc: Track file:line numbers, accept files which violate
	some lies in rcs file format.
	* rcs_import.cc (cvs_tree_walker): 
	Warn rather than crash on parse errors.
	(cvs_history)
	(cvs_commit)
	(cvs_cluster)
	(prepared_revision)
	(import_branch)
	(import_cvs_repo): Support non-branch tags.

2005-06-21  graydon hoare  <graydon@pobox.com>

	* rcs_import.{cc,hh} (import_rcs_file): Rename to test_parse_rcs_file.
	* commands.cc (rcs_import): rename call.

2005-06-19  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc: Rewrite change set inference logic.

2005-06-14  Richard Levitte  <richard@levitte.org>

	* std_hooks.lua (get_preferred_merge2_command,
	get_preferred_merge3_command): EDITOR may be undefined.  In that
	case, os.getenv() returns nil, on which string.lower() chokes.
	It's much better to check for that and default to an empty
	string.

2005-06-11  Derek Scherger  <derek@echologic.com>

	* commands.cc (complete_command): log command expansion messages
	with L instead of P to reduce chatter
	(status): add --brief option and corresponding output
	(identify): add trailing space to comment gcc complains about
	* monotone.cc: fix comment typo and add additional details for
	command specific options
	* monotone.texi (Automation): list inventory status code
	combinations and descriptions
	* tests/t_status.at: new test of status command and --brief option
	* testsuite.at: add it

2005-06-11  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc: revert should ignore the ignore hooks, otherwise bad
	things happen (revert a single ignored file, resultant empty ignore list
	reverts the whole working copy).
	* app_state.cc, app_state.hh: give set_restriction a flag to disregard
	file-ignore hooks.
	* tests/t_revert_restrict.at, testsuite.at: a test

2005-06-09  Riccardo Ghetta  <birrachiara@tin.it>

	* std_hooks.lua: make binary_file return nil on unreadable/empty files
	